--- a/styleForms.css
+++ b/styleForms.css
@@ -24,6 +24,12 @@ body {
     text-align: center;
 }
 
+.container h2 {
+    color: black;
+    font-size: 26px;
+    text-align: center;
+}
+
 .container form a {
     text-decoration: none;
 }
